small-fixes: use transparent layer instead of gradient for bigger teasers, to make them more performant on small devices

--- a/sass/modules/_cp-leadarea.sass
+++ b/sass/modules/_cp-leadarea.sass
@@ -16,14 +16,16 @@ $cp__lead__wrap-width: 65%
 .cp__lead--dark, %cp__lead--dark
 	@extend %cp__lead
 	background-color: $black
-	&:after
-		+box-shadow(inset 0 -200px 200px rgba($black, 0.7))
+	+respond-min($break-2)
+		&:after
+			+box-shadow(inset 0 -200px 200px rgba($black, 0.7))
 
 .cp__lead--light, %cp__lead--light
 	@extend %cp__lead
 	background-color: $white
-	&:after
-		+box-shadow(inset 0 -200px 200px rgba($white, 0.7))
+	+respond-min($break-2)
+		&:after
+			+box-shadow(inset 0 -200px 200px rgba($white, 0.7))
 
 .cp__lead-assets, %cp__lead-assets
 	overflow: hidden
@@ -104,9 +106,8 @@ $cp__lead__wrap-width: 65%
 .cp__lead-leader__title__wrap, %cp__lead-leader__title__wrap
 	position: absolute
 	overflow: hidden
-	bottom: $medium
-	padding-left: 5%
-	padding-right: 5%
+	bottom: 0
+	padding: $thin 5% $medium 5%
 	width: 100%
 	z-index: 2
 
@@ -119,6 +120,10 @@ $cp__lead__wrap-width: 65%
 		@extend %cp__link--dark
 	.cp__lead__supertitle
 		@extend %cp__link--dark
+	background-color: $black
+	background-color: transparentize($black, 0.35)
+	+respond-min($break-2)
+		background-color: transparent
 
 .cp__lead-leader__title__wrap--light
 	@extend %cp__lead-leader__title__wrap
@@ -128,6 +133,10 @@ $cp__lead__wrap-width: 65%
 		@extend %cp__link--light
 	.cp__lead__supertitle
 		@extend %cp__link--light
+	background-color: $white
+	background-color: transparentize($white, 0.35)
+	+respond-min($break-2)
+		background-color: transparent
 
 //teaser type full (fullwidth leader)
 .cp__lead-full__wrap
@@ -150,9 +159,8 @@ $cp__lead__wrap-width: 65%
 	position: absolute
 	overflow: hidden
 	text-align: center
-	bottom: $medium
-	padding-left: 15%
-	padding-right: 15%
+	bottom: 0
+	padding: $thin 15% $medium 15%
 	width: 100%
 	z-index: 2
 
@@ -162,6 +170,10 @@ $cp__lead__wrap-width: 65%
 		@extend %cp__link--dark--underlined
 	.cp__lead__subtitle
 		@extend %cp__link--dark
+	background-color: $black
+	background-color: transparentize($black, 0.35)
+	+respond-min($break-2)
+		background-color: transparent
 
 .cp__lead-full__title__wrap--light
 	@extend %cp__lead-full__title__wrap
@@ -169,6 +181,10 @@ $cp__lead__wrap-width: 65%
 		@extend %cp__link--light--underlined
 	.cp__lead__subtitle
 		@extend %cp__link--light
+	background-color: $white
+	background-color: transparentize($white, 0.35)
+	+respond-min($break-2)
+		background-color: transparent
 
 //some button adaptions for leadarea only
 .cp__lead__wrap
